# mobile_robot

./: CMakeLists.txt  package.xml
description/launch/: description.launch  display.launch  gazebo.launch
description/urdf/: serving_robot_v6.xacro  serving_robot_v6_gazebo.xacro
launch/: gazebo_mapping_serving_robot.launch  gazebo_navigation_serving_robot.launch  move_base.launch  serving_robot_gazebo.launch  view_serving_robot.launch
maps/: map.yaml
